midterm even final commit

--- a/index.html
+++ b/index.html
@@ -1,11 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="about cats" content="SEO description ">
+    <meta name="keywords" content="css, java script, html">
+    <title>cats</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
 </head>
+
 <body>
-    
+    <!--Name: Bhakti Patel; Student id: 8912260-->
+    <header class="structual">
+        <h1>
+            details of animals
+        </h1>
+    </header>
+    <main class="structual">
+        <figure id="img 1">
+            <img src="images/cat1.jpg "alt="cat wearing glasses">
+            <figcaption>cat sitting in a proper way</figcaption>
+        </figure>
+        <figure id="img 2">
+            <img src="images/Multiple-cats-on-white-background.jpg" alt="more than one cats can see in one frame">
+            <figcaption>giving cute poses</figcaption>
+        </figure>
+        <section>
+            <h2>
+                more information
+            </h2>
+            <ul>
+                <li><a href="https://in.images.search.yahoo.com/images/view;_ylt=Awrtg23EoC1l2s4Bfw.9HAx.;_ylu=c2VjA3NyBHNsawNpbWcEb2lkA2NlM2IxZTBjN2I0OGI5ZjI4OTgwZGQxY2Y2NDhlMjJkBGdwb3MDMwRpdANiaW5n?back=https%3A%2F%2Fin.images.search.yahoo.com%2Fsearch%2Fimages%3Fp%3Dimages%2Bof%2Bcats%26type%3DE210IN1483G0%26fr%3Dmcafee%26fr2%3Dpiv-web%26tab%3Dorganic%26ri%3D3&w=4752&h=3168&imgurl=get.pxhere.com%2Fphoto%2Fanimal-pet-kitten-cat-small-mammal-fauna-heal-blue-eye-close-up-nose-whiskers-vertebrate-domestic-lying-tabby-cat-norwegian-forest-cat-ginger-fur-small-to-medium-sized-cats-cat-like-mammal-carnivoran-domestic-short-haired-cat-domestic-long-haired-cat-609263.jpg&rurl=https%3A%2F%2Fpxhere.com%2Fen%2Fphoto%2F609263&size=1973.1KB&p=images+of+cats&oid=ce3b1e0c7b48b9f28980dd1cf648e22d&fr2=piv-web&fr=mcafee&tt=Free+Images+%3A+animal%2C+pet%2C+kitten%2C+fauna%2C+heal%2C+blue+eye%2C+close+up+...&b=0&ni=21&no=3&ts=&tab=organic&sigr=Rv4_vqbfRJSA&sigb=6PC2jmLBRLnP&sigi=hPUnPciddygv&sigt=nxWTHyNKxLMY&.crumb=TKa9mEraPR8&fr=mcafee&fr2=piv-web&type=E210IN1483G0"
+                        target="_blank">site </a></li>
+                <li><a href="https://in.images.search.yahoo.com/images/view;_ylt=Awrtg23EoC1l2s4Bjw.9HAx.;_ylu=c2VjA3NyBHNsawNpbWcEb2lkAzYzY2ZjYTNmMjFjOGFlNWFlNDU0YTg4ZTFiZjEwNjY3BGdwb3MDMTkEaXQDYmluZw--?back=https%3A%2F%2Fin.images.search.yahoo.com%2Fsearch%2Fimages%3Fp%3Dimages%2Bof%2Bcats%26type%3DE210IN1483G0%26fr%3Dmcafee%26fr2%3Dpiv-web%26tab%3Dorganic%26ri%3D19&w=2560&h=1600&imgurl=www.wallpaperup.com%2Fuploads%2Fwallpapers%2F2015%2F06%2F02%2F708282%2Faccf354f6bc40a246191c9036a76c3f5.jpg&rurl=https%3A%2F%2Fwww.wallpaperup.com%2F708282%2Fkittens_kitten_cat_cats_baby_cute_s.html&size=460.5KB&p=images+of+cats&oid=63cfca3f21c8ae5ae454a88e1bf10667&fr2=piv-web&fr=mcafee&tt=Kittens+kitten+cat+cats+baby+cute+s+wallpaper+%7C+2560x1600+%7C+708282+...&b=0&ni=21&no=19&ts=&tab=organic&sigr=KEZt2x9cVchO&sigb=MKcIoG0xuxAI&sigi=bflp2vjUvIN.&sigt=xALsd8rgoviD&.crumb=TKa9mEraPR8&fr=mcafee&fr2=piv-web&type=E210IN1483G0"
+                        target="_blank">site 1</a></li>
+                <li><a href="https://in.images.search.yahoo.com/images/view;_ylt=Awrtg23EoC1l2s4BlA.9HAx.;_ylu=c2VjA3NyBHNsawNpbWcEb2lkA2E1YjRmZTkxNmZlNDQ0NDBlMGM2MGU5NDFlMjEyYTBiBGdwb3MDMjQEaXQDYmluZw--?back=https%3A%2F%2Fin.images.search.yahoo.com%2Fsearch%2Fimages%3Fp%3Dimages%2Bof%2Bcats%26type%3DE210IN1483G0%26fr%3Dmcafee%26fr2%3Dpiv-web%26tab%3Dorganic%26ri%3D24&w=1600&h=1200&imgurl=4.bp.blogspot.com%2F-wC6M_4vZRsY%2FT2wQ85IW11I%2FAAAAAAAAGKM%2Fy2R4nyW96Rg%2Fs1600%2FCat-05.jpg&rurl=http%3A%2F%2Fwildlifeanimalz.blogspot.com%2F2012%2F03%2Fcat-facts-and-photos-images.html&size=306.6KB&p=images+of+cats&oid=a5b4fe916fe44440e0c60e941e212a0b&fr2=piv-web&fr=mcafee&tt=Cat+%7C+Facts+and+Photos-Images+%7C+The+Wildlife&b=0&ni=21&no=24&ts=&tab=organic&sigr=lX5hdBeQYx7q&sigb=TbT7rTRDOAaC&sigi=X24ssluRg_Gf&sigt=imq_heLN5y1_&.crumb=TKa9mEraPR8&fr=mcafee&fr2=piv-web&type=E210IN1483G0"
+                        target="_blank">site 2</a></li>
+            </ul>
+        </section>
+    </main>
+    <footer class="structual">
+        <p>
+            &copy;Bhakti Patel,2023</p>
+    </footer>
 </body>
+
 </html>
